quando clicchi su chiudi esce un nuovo frame per scegliere i colori del tavolo

--- a/GameG/src/main/java/Biliardo/MenuAvvio/fieldChooser.form
+++ b/GameG/src/main/java/Biliardo/MenuAvvio/fieldChooser.form
@@ -11,17 +11,17 @@
       <grid id="8dde2" binding="panel1" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="ba60a" class="javax.swing.JButton" binding="button3" default-binding="true">
+          <component id="ba60a" class="javax.swing.JButton" binding="fantasyWoodButton" default-binding="true">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Button"/>
+              <text value="fantasy wood"/>
             </properties>
           </component>
           <vspacer id="c4e92">
@@ -39,12 +39,12 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="da05f" class="javax.swing.JButton" binding="button1" default-binding="true">
+          <component id="da05f" class="javax.swing.JButton" binding="lightWoodButton" default-binding="true">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Button"/>
+              <text value="light wood"/>
             </properties>
           </component>
           <vspacer id="b8961">
@@ -62,15 +62,38 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="e76ce" class="javax.swing.JButton" binding="button2" default-binding="true">
+          <component id="e76ce" class="javax.swing.JButton" binding="darkWoodButton" default-binding="true">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Button"/>
+              <text value="dark wood"/>
             </properties>
           </component>
           <vspacer id="50d49">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
+        </children>
+      </grid>
+      <grid id="a8f9d" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="45642" class="javax.swing.JButton" binding="metalButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="metal"/>
+            </properties>
+          </component>
+          <vspacer id="edf96">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
